Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54901

QCamera with non-existent camera is not invalid with GStreamer backend

XMLWordPrintable

      To reproduce, run qtmultimedia/tests/auto/integration/qcamerabackend test with camera attached to the system.

      testCtorWithDevice and testCtorWithCameraInfo tests fail for invalid camera id tests (lines 153, 178) because they return NoError even though requested camera is not present.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes