Return ServiceMissingError if no camera found by name

If no camera devices found with requested name, the object should be invalid.

Task-number: QTBUG-54901
Change-Id: I54037c5c7caad09da2df51eb0624eb0e88f12bf8
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>